--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">kotlin_bill</string>
+    <string name="app_name">Share Food</string>
+
+    <string name="add_donate">add Donate</string>
+    <string name="admin_login">Admin Login</string>
+    <string name="submit">Submit</string>
+    <string name="stock">Stock</string>
+    <string name="donation">Donation</string>
+    <string name="distribution">Distribution</string>
+    <string name="donate1">Donate</string>
+    <string name="delete_donate">delete_donate</string>
 </resources>
